ZIndex fix and textarea for builder component so it's visible on all screen sizes.

--- a/src/component/ribbon-corner.styl
+++ b/src/component/ribbon-corner.styl
@@ -5,6 +5,7 @@
   overflow hidden
   position absolute
   background transparent !important
+  z-index 100
 
   &::before,
   &::after
